ajustando media query

--- a/curiosidades.html
+++ b/curiosidades.html
@@ -3,17 +3,17 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
-    <link rel="stylesheet" href="curiosidades.css" />
+    <link rel="stylesheet" href="estilos/style.css" />
+    <link rel="stylesheet" href="estilos/curiosidades.css" />
     <title>Curiosidades</title>
   </head>
   <body>
     <header class="cabecalho">
       <!-- HEADER (parte da logo e foto de capa)-->
       <a href="index.html"
-        ><img src="logo-transp.png" alt="logo" class="logo"
+        ><img src="imagens/logo-transp.png" alt="logo" class="logo"
       /></a>
-      <img src="everglow-capa.jpeg" alt="capa" class="capa" />
+      <img src="imagens/everglow-capa.jpeg" alt="capa" class="capa" />
     </header>
 
     <nav class="menu">
@@ -35,7 +35,7 @@
     </main>
 
     <footer class="rodape">
-      <img class="logo-rodape" src="logo-transp.png" alt="" />
+      <img class="logo-rodape" src="imagens/logo-transp.png" alt="" />
       <p class="texto-rodape">
         Todos os direitos reservados - &copy Nayara 2023
       </p>
