--- a/index.html
+++ b/index.html
@@ -3,16 +3,17 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
-    <title>EVEGLOW</title>
+    <link rel="stylesheet" href="estilos/style.css" />
+    <title>EVERGLOW</title>
   </head>
   <body>
     <header class="cabecalho">
       <!-- HEADER (parte da logo e foto de capa)-->
       <a href="index.html"
-        ><img src="logo-transp.png" alt="logo" class="logo"
+        ><img src="imagens/logo-transp.png" alt="logo" class="logo"
       /></a>
-      <img src="everglow-capa.jpeg" alt="capa" class="capa" />
+      <div class="capa"></div>
+      <!--  <img src="imagens/everglow-capa.jpeg" alt="capa" class="capa"/>  -->
     </header>
 
     <nav class="menu">
@@ -28,9 +29,9 @@
 
       <section class="apresentacao">
         <!-- SECTION (primeira seção apresentação )-->
-        <h2>Oláá muito prazer, nós somos o Everglow!</h2>
+        <h2>Olá! muito prazer, nós somos o EVERGLOW!</h2>
         <p>
-          Um grupo de K-Pop feminino sul-coreano sob comando da agência
+          Um grupo de K-Pop feminino sul-coreano sob comando da agência <br>
           <a
             href="https://pt.wikipedia.org/wiki/Yuehua_Entertainment"
             target="_blank"
@@ -43,8 +44,8 @@
           <abbr title="Han Eunji">Mia</abbr>,
           <abbr title="Jo Serim">Onda</abbr>,
           <abbr title="Heo Yoorim">Aisha</abbr> e
-          <abbr title="Wang Yiren">Yiren</abbr>. Estreiamos em 18 de março de
-          2019, com o single álbum Arrival of Everglow.
+          <abbr title="Wang Yiren">Yiren</abbr>. Estreiamos em 18 de março <br> de
+          2019, com o single álbum 'Arrival of Everglow'.
           <!-- E:U, Sihyeon, Mia, Onda, Aisha e Yiren. -->
         </p>
       </section>
@@ -53,7 +54,7 @@
         <!-- SECTION (segunda seção novo videoclipe)-->
         <br />
         <h3>Você viu o que acabamos de lançar?🤩</h3>
-        <iframe
+        <!--   <iframe
           class="video-slay"
           width="560"
           height="315"
@@ -62,7 +63,7 @@
           frameborder="0"
           allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
           allowfullscreen
-        ></iframe>
+        ></iframe>  -->
       </section>
 
       <h3 class="discografia">Discografia:</h3>
@@ -195,7 +196,7 @@
       </a>
     </div>
     <footer class="rodape">
-      <img class="logo-rodape" src="logo-transp.png" alt="">
+      <img class="logo-rodape" src="imagens/logo-transp.png" alt="">
       <p class="texto-rodape">Todos os direitos reservados - &copy Nayara 2023</p>
     </footer>
   </body>
