fim do mobile first para o index

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <br />
         <h3>Você viu o que acabamos de lançar?🤩</h3>
           <div class="video-slay">
-            <iframe width="0px" height="0px" src="https://www.youtube.com/embed/jI5p2ePoVcc?si=BNbJiAYBdWw4d2lP" title="YouTube video player" frameborder="0"allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen>
+            <iframe width="250px" height="150px" src="https://www.youtube.com/embed/jI5p2ePoVcc?si=BNbJiAYBdWw4d2lP" title="YouTube video player" frameborder="0"allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen>
             </iframe>
           </div>
       </section>
@@ -211,7 +211,7 @@
 
     </div>
     <footer class="rodape">
-      <img class="logo-rodape" src="imagens/logo-transp.png" alt="">
+      <img class="logo-rodape" width="35px" src="imagens/logo-transp.png" alt="">
       <p class="texto-rodape">Todos os direitos reservados - &copy Nayara 2023</p>
     </footer>
   </body>
