fim do media query do index

--- a/index.html
+++ b/index.html
@@ -9,15 +9,16 @@
   <body>
     <header class="cabecalho">
       <!-- HEADER (parte da logo e foto de capa)-->
+      <a href="index.html"> <img class="logo-top" src="imagens/logo-transp.png" alt=""> </a>
       <div class="capa"></div>
-      <nav class="menu">
-        <!-- NAV (parte dos linkes de navegação do menu)-->
-        <a href="integrantes.html">INTEGRANTES</a>
-        <a href="clipes.html">CLIPES</a>
-        <a href="empresa.html">EMPRESA</a>
-        <a href="curiosidades.html">CURIOSIDADES</a>
-      </nav>
     </header>
+    <nav class="menu">
+      <!-- NAV (parte dos linkes de navegação do menu)-->
+      <a href="integrantes.html">INTEGRANTES</a>
+      <a href="clipes.html">CLIPES</a>
+      <a href="empresa.html">EMPRESA</a>
+      <a href="curiosidades.html">CURIOSIDADES</a>
+    </nav>
     
 
     <main class="container">
@@ -51,7 +52,7 @@
         <br />
         <h3>Você viu o que acabamos de lançar?🤩</h3>
           <div class="video-slay">
-            <iframe width="250px" height="150px" src="https://www.youtube.com/embed/jI5p2ePoVcc?si=BNbJiAYBdWw4d2lP" title="YouTube video player" frameborder="0"allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen>
+            <iframe  src="https://www.youtube.com/embed/jI5p2ePoVcc?si=BNbJiAYBdWw4d2lP" title="YouTube video player" frameborder="0"allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen>
             </iframe>
           </div>
       </section>
