ajuste pagina integrantes

--- a/empresa.html
+++ b/empresa.html
@@ -10,12 +10,11 @@
   <body>
     <header class="cabecalho">
       <!-- HEADER (parte da logo e foto de capa)-->
-      <a href="index.html"
-        ><img src="imagens/logo-transp.png" alt="logo" class="logo"
-      /></a>
-      <img src="imagens/everglow-capa.jpeg" alt="capa" class="capa" />
+      <a href="index.html">
+        <img class="logo-top" src="imagens/logo-transp.png" alt="" />
+      </a>
+      <div class="capa"></div>
     </header>
-
     <nav class="menu">
       <!-- NAV (parte dos linkes de navegação do menu)-->
       <a href="integrantes.html">INTEGRANTES</a>
@@ -23,7 +22,6 @@
       <a href="empresa.html">EMPRESA</a>
       <a href="curiosidades.html">CURIOSIDADES</a>
     </nav>
-
     <main class="container">
       <!-- MAIN (parte cental do corpo)-->
 
