--- a/integrantes.html
+++ b/integrantes.html
@@ -10,12 +10,11 @@
   <body>
     <header class="cabecalho">
       <!-- HEADER (parte da logo e foto de capa)-->
-      <a href="index.html"
-        ><img src="imagens/logo-transp.png" alt="logo" class="logo"
-      /></a>
-      <img src="imagens/everglow-capa.jpeg" alt="capa" class="capa" />
+      <a href="index.html">
+        <img class="logo-top" src="imagens/logo-transp.png" alt="" />
+      </a>
+      <div class="capa"></div>
     </header>
-
     <nav class="menu">
       <!-- NAV (parte dos linkes de navegação do menu)-->
       <a href="integrantes.html">INTEGRANTES</a>
@@ -26,12 +25,12 @@
 
     <main class="container">
       <!-- MAIN (parte cental do corpo)-->
-      <h1 class="nos-apresentando">Nos apresentando:</h1>
-      <br />
-      <article>
+      <h1 class="texto-nos-apresentando">Nos apresentando:</h1>
+
+      <article class="content">
         <!-- ARTIGO DA E:U -->
         <img class="foto1" src="imagens/eu1.jpg" alt="foto e:u" />
-        <p class="descricao">
+        <p class="texto-descricao">
           Oi, meu nome é E:U! (Park Ji-won) nasci em Hanam, Gyeonggi - Coreia do
           Sul em 19 de maio de 1998 (25 anos).
           <br />Minhas posições no grupo são: Rapper Principal, Dançarina
@@ -44,7 +43,7 @@
       <article>
         <!-- ARTIGO DA SIHYEON -->
         <img class="foto1" src="imagens/sihyeon1.jpg" alt="foto sihyeon" />
-        <p class="descricao">
+        <p class="texto-descricao">
           Olá, sou Sihyeon! (Kim Si-hyeon) nasci em Seongnam - Coreia do Sul em
           5 de agosto de 1999 (24 anos).
           <br />Minhas posições são: Líder, Vocalista Líder, Visual e Face.
@@ -57,7 +56,7 @@
       <article>
         <!-- ARTIGO DA MIA -->
         <img class="foto1" src="imagens/mia1.jpg" alt="foto mia" />
-        <p class="descricao">
+        <p class="texto-descricao">
           Oi pessoal, sou a Mia! (Han Eun-ji) nasci em Gyeongsang - Coreia do
           Sul em 13 de janeiro de 2000 (23 anos).
           <br />Minhas posições no grupo são: Vocalista Principal, Dançarina
@@ -70,7 +69,7 @@
       <article>
         <!-- ARTIGO DA ONDA -->
         <img class="foto1" src="imagens/onda1.jpg" alt="foto onda" />
-        <p class="descricao">
+        <p class="texto-descricao">
           Oi, aqui é a Onda! (Jo Se-rim) nasci em Bucheon, Gyeonggi - Coreia do
           Sul em 18 de maio de 2000 (23 anos).
           <br />Minhas posições: Dançarina Líder, Visual e Sub Vocalista.
@@ -83,7 +82,7 @@
       <article>
         <!-- ARTIGO DA AISHA -->
         <img class="foto1" src="imagens/aisha1.jpg" alt="foto aisha" />
-        <p class="descricao">
+        <p class="texto-descricao">
           Como estão? sou Aisha (Heo Yoo-rim) nasci em Suwon, Gyeonggi - Coreia
           do Sul em 21 de julho de 2000 (23 anos).
           <br />Assumo as posições de: Rapper Líder Sub Vocalista e Dançarina.
@@ -96,7 +95,7 @@
       <article>
         <!-- ARTIGO DA YIREN -->
         <img class="foto1" src="imagens/yiren1.jpg" alt="foto yiren" />
-        <p class="descricao">
+        <p class="texto-descricao">
           Oi, meu nome é Yiren (Wang Yi-ren) nasci em Chequião, Hancheu - China
           em 29 de dezembro de 2000 (22 anos).
           <br />Tenho as posições no grupo de: Dançarina Líder, Sub Vocalista,
