--- a/clipes.html
+++ b/clipes.html
@@ -7,23 +7,18 @@
     <link rel="stylesheet" href="estilos/clipes.css" />
     <title>Clipes</title>
   </head>
-  <body>
-    <header class="cabecalho">
-      <!-- HEADER (parte da logo e foto de capa)-->
-      <a href="index.html"
-        ><img src="imagens/logo-transp.png" alt="logo" class="logo"
-      /></a>
-      <img src="imagens/everglow-capa.jpeg" alt="capa" class="capa" />
-    </header>
-
-    <nav class="menu">
-      <!-- NAV (parte dos linkes de navegação do menu)-->
-      <a href="integrantes.html">INTEGRANTES</a>
-      <a href="clipes.html">CLIPES</a>
-      <a href="empresa.html">EMPRESA</a>
-      <a href="curiosidades.html">CURIOSIDADES</a>
-    </nav>
-
+  <body><header class="cabecalho">
+    <!-- HEADER (parte da logo e foto de capa)-->
+    <a href="index.html"> <img class="logo-top" src="imagens/logo-transp.png" alt=""> </a>
+    <div class="capa"></div>
+  </header>
+  <nav class="menu">
+    <!-- NAV (parte dos linkes de navegação do menu)-->
+    <a href="integrantes.html">INTEGRANTES</a>
+    <a href="clipes.html">CLIPES</a>
+    <a href="empresa.html">EMPRESA</a>
+    <a href="curiosidades.html">CURIOSIDADES</a>
+  </nav>
     <main class="container">
       <!-- MAIN (parte cental do corpo)-->
 
