fim da media query celular pagina integrantes

--- a/integrantes.html
+++ b/integrantes.html
@@ -37,12 +37,16 @@
           Principal e Sub Vocalista. <br />Tenho 1.61 mts de altura. <br />Meu
           signo Chinês é Tigre, e do Zodíaco, Touro. <br />Meu MBTI é ISFJ.
         </p>
-        <img class="foto2" src="imagens/eu2.jpg" alt="" />
+        <img class="foto2 sumir" src="imagens/eu2.jpg" alt="" />
       </article>
 
       <article>
         <!-- ARTIGO DA SIHYEON -->
-        <img class="foto1" src="imagens/sihyeon1.jpg" alt="foto sihyeon" />
+        <img
+          class="foto1 sumir"
+          src="imagens/sihyeon1.jpg"
+          alt="foto sihyeon"
+        />
         <p class="texto-descricao">
           Olá, sou Sihyeon! (Kim Si-hyeon) nasci em Seongnam - Coreia do Sul em
           5 de agosto de 1999 (24 anos).
@@ -63,12 +67,12 @@
           Principal e Sub Rapper. <br />Tenho 1.63 mts de altura. Meu signo
           Chinês é Coelho, e do Zodíaco, Capricornio. <br />Meu MBTI é ISTP.
         </p>
-        <img class="foto2" src="imagens/mia2.jpg" alt="" />
+        <img class="foto2 sumir" src="imagens/mia2.jpg" alt="" />
       </article>
 
       <article>
         <!-- ARTIGO DA ONDA -->
-        <img class="foto1" src="imagens/onda1.jpg" alt="foto onda" />
+        <img class="foto1 sumir" src="imagens/onda1.jpg" alt="foto onda" />
         <p class="texto-descricao">
           Oi, aqui é a Onda! (Jo Se-rim) nasci em Bucheon, Gyeonggi - Coreia do
           Sul em 18 de maio de 2000 (23 anos).
@@ -89,12 +93,12 @@
           <br />Tenho 1.74 mts de altura. <br />Meu signo Chinês é Dragão, e do
           Zodíaco, Cancer. <br />Meu MBTI é ESTP.
         </p>
-        <img class="foto2" src="imagens/aisha2.jpg" alt="" />
+        <img class="foto2 sumir" src="imagens/aisha2.jpg" alt="" />
       </article>
 
       <article>
         <!-- ARTIGO DA YIREN -->
-        <img class="foto1" src="imagens/yiren1.jpg" alt="foto yiren" />
+        <img class="foto1 sumir" src="imagens/yiren1.jpg" alt="foto yiren" />
         <p class="texto-descricao">
           Oi, meu nome é Yiren (Wang Yi-ren) nasci em Chequião, Hancheu - China
           em 29 de dezembro de 2000 (22 anos).
