ajuste tela media

--- a/integrantes.html
+++ b/integrantes.html
@@ -103,7 +103,7 @@
           Oi, meu nome é Yiren (Wang Yi-ren) nasci em Chequião, Hancheu - China
           em 29 de dezembro de 2000 (22 anos).
           <br />Tenho as posições no grupo de: Dançarina Líder, Sub Vocalista,
-          Sub Rapper, Visual, Center e
+          Visual, Center e
           <abbr class="maknae" title="Integrante mais nova">Maknae</abbr>.
           <br />
           Tenho 1.63 mts de altura.
