--- a/clipes.html
+++ b/clipes.html
@@ -7,60 +7,67 @@
     <link rel="stylesheet" href="estilos/clipes.css" />
     <title>Clipes</title>
   </head>
-  <body><header class="cabecalho">
-    <!-- HEADER (parte da logo e foto de capa)-->
-    <a href="index.html"> <img class="logo-top" src="imagens/logo-transp.png" alt=""> </a>
-    <div class="capa"></div>
-  </header>
-  <nav class="menu">
-    <!-- NAV (parte dos linkes de navegação do menu)-->
-    <a href="integrantes.html">INTEGRANTES</a>
-    <a href="clipes.html">CLIPES</a>
-    <a href="empresa.html">EMPRESA</a>
-    <a href="curiosidades.html">CURIOSIDADES</a>
-  </nav>
-    <main class="container">
-      <!-- MAIN (parte cental do corpo)-->
+  <body>
+      <header class="cabecalho">
+      <!-- HEADER (parte da logo e foto de capa)-->
+      <!-- <a href="index.html"> <img class="logo-top" src="imagens/logo-transp.png" alt=""> </a> -->
+      <div class="capa"></div>
+      </header>
+    <nav class="menu">
+      <!-- NAV (parte dos linkes de navegação do menu)-->
+      <a href="index.html">PÁGINA INICIAL</a>
+      <a href="integrantes.html">INTEGRANTES</a>
+      <a href="clipes.html" class="clipes-ativo" >CLIPES</a>
+      <a href="curiosidades.html">CURIOSIDADES</a>
+    </nav>
+      <main class="container">
+        <!-- MAIN (parte cental do corpo)-->
 
-      <h1 class="canal-youtube">Conheça nosso canal no <a style="text-decoration: none;" href="https://www.youtube.com/@EVERGLOWOFFICIAL/playlists" target="_blank">"YouTube"</a></h1>
-      <h2 class="sub-dança-sincronia">Aqui você pode ver nossa <strong>dança forte</strong> e <strong>sincronia afiada</strong>! &#x1F609</h2>
+        <h1 class="canal-youtube">Conheça nosso canal no <a style="text-decoration: none;" href="https://www.youtube.com/@EVERGLOWOFFICIAL/playlists" target="_blank">"YouTube"</a></h1>
+        <h2 class="sub-dança-sincronia">Aqui você pode conheçer um pouco da nossa dança e <strong>sincronia afiada</strong>! &#x1F609</h2>
 
-      <a href="https://www.youtube.com/watch?v=HvGql8HwOIM&list=PLCcKMSYJ4B9c1UY3ihJu7Hzk_xVnsqXj3" target="_blank" >
-        <img  class="mv" src="imagens/capa-bbc.png" alt="">
-        <p class="title">BON BON CHOCOLAT</p>
-      </a>
-      
+        <a href="https://www.youtube.com/watch?v=HvGql8HwOIM&list=PLCcKMSYJ4B9c1UY3ihJu7Hzk_xVnsqXj3" target="_blank" >
+          <img  class="mv" src="imagens/capa-bbc.png" alt="">
+          <p class="title">BON BON CHOCOLAT</p>
+        </a>
+        
 
-      <a href="https://www.youtube.com/watch?v=4gX_p1VkgA4&list=PLCcKMSYJ4B9c1UY3ihJu7Hzk_xVnsqXj3&index=3" target="_blank" >
-        <img class="mv" src="imagens/capa-adios2.png" alt="">
-      </a>
+        <a href="https://www.youtube.com/watch?v=4gX_p1VkgA4&list=PLCcKMSYJ4B9c1UY3ihJu7Hzk_xVnsqXj3&index=3" target="_blank" >
+          <img class="mv" src="imagens/capa-adios2.png" alt="">
+        </a>
 
-      <a href="https://www.youtube.com/watch?v=3oRu_QfZplo&list=PLCcKMSYJ4B9c1UY3ihJu7Hzk_xVnsqXj3&index=5" target="_blank" >
-        <img class="mv" src="imagens/capa-dundun.png" alt="">
-      </a>
+        <a href="https://www.youtube.com/watch?v=3oRu_QfZplo&list=PLCcKMSYJ4B9c1UY3ihJu7Hzk_xVnsqXj3&index=5" target="_blank" >
+          <img class="mv" src="imagens/capa-dundun.png" alt="">
+        </a>
 
-      <a href="https://www.youtube.com/watch?v=jeI992mvlEY&list=PLCcKMSYJ4B9c1UY3ihJu7Hzk_xVnsqXj3&index=8" target="_blank" >
-        <img class="mv" src="imagens/capa-ladida.png" alt="">
-      </a>
+        <a href="https://www.youtube.com/watch?v=jeI992mvlEY&list=PLCcKMSYJ4B9c1UY3ihJu7Hzk_xVnsqXj3&index=8" target="_blank" >
+          <img class="mv" src="imagens/capa-ladida.png" alt="">
+        </a>
 
-      <a href="https://www.youtube.com/watch?v=Z3RA7bi5FUM&list=PLCcKMSYJ4B9c1UY3ihJu7Hzk_xVnsqXj3&index=10" target="_blank" >
-        <img class="mv" src="imagens/capa-first.png" alt="">
-      </a>
+        <a href="https://www.youtube.com/watch?v=Z3RA7bi5FUM&list=PLCcKMSYJ4B9c1UY3ihJu7Hzk_xVnsqXj3&index=10" target="_blank" >
+          <img class="mv" src="imagens/capa-first.png" alt="">
+        </a>
 
-      <a href="https://www.youtube.com/watch?v=-2X-pL06628&list=PLCcKMSYJ4B9c1UY3ihJu7Hzk_xVnsqXj3&index=13" target="_blank" >
-        <img class="mv" src="imagens/capa-pirate.png" alt="">
-      </a>
+        <a href="https://www.youtube.com/watch?v=-2X-pL06628&list=PLCcKMSYJ4B9c1UY3ihJu7Hzk_xVnsqXj3&index=13" target="_blank" >
+          <img class="mv" src="imagens/capa-pirate.png" alt="">
+        </a>
 
-      <a href="https://www.youtube.com/watch?v=jI5p2ePoVcc&list=PLCcKMSYJ4B9c1UY3ihJu7Hzk_xVnsqXj3&index=14" target="_blank" >
-        <img class="mv" src="imagens/capa-slay.png" alt="">
-      </a>
-    </main>
+        <a href="https://www.youtube.com/watch?v=jI5p2ePoVcc&list=PLCcKMSYJ4B9c1UY3ihJu7Hzk_xVnsqXj3&index=14" target="_blank" >
+          <img class="mv" src="imagens/capa-slay.png" alt="">
+        </a>
 
-    <footer class="rodape">
-      <img class="logo-rodape" src="imagens/logo-transp.png" alt="" />
-      <p class="texto-rodape">
-        Todos os direitos reservados - &copy Nayara 2023
-      </p>
-    </footer>
+        <a href="https://www.youtube.com/watch?v=JZmBo1EQnlE" target="_blank">
+          <img class="mv" src="imagens/capa-promise.png" alt="">
+        </a>
+      </main>
+
+      <footer class="rodape">
+        <a href="index.html">
+          <img class="logo-rodape" src="imagens/logo-transp.png" alt="" />
+        </a>
+        <p class="texto-rodape">
+          Todos os direitos reservados - &copy Nayara 2023
+        </p>
+      </footer>
   </body>
 </html>
