--- a/curiosidades.html
+++ b/curiosidades.html
@@ -10,17 +10,17 @@
   <body>
     <header class="cabecalho">
       <!-- HEADER (parte da logo e foto de capa)-->
-      <a href="index.html">
+      <!--<a href="index.html">
         <img class="logo-top" src="imagens/logo-transp.png" alt="" />
-      </a>
+      </a> -->
       <div class="capa"></div>
     </header>
     <nav class="menu">
       <!-- NAV (parte dos linkes de navegação do menu)-->
+      <a href="index.html">PÁGINA INICIAL</a>
       <a href="integrantes.html">INTEGRANTES</a>
       <a href="clipes.html">CLIPES</a>
-      <a href="empresa.html">EMPRESA</a>
-      <a href="curiosidades.html">CURIOSIDADES</a>
+      <a href="curiosidades.html" class="curiosidades-ativo">CURIOSIDADES</a>
     </nav>
     <main class="container">
       <!-- MAIN (parte cental do corpo)-->
@@ -33,7 +33,9 @@
     </main>
 
     <footer class="rodape">
-      <img class="logo-rodape" src="imagens/logo-transp.png" alt="" />
+      <a href="index.html"
+        ><img class="logo-rodape" src="imagens/logo-transp.png" alt=""
+      /></a>
       <p class="texto-rodape">
         Todos os direitos reservados - &copy Nayara 2023
       </p>
