--- a/integrantes.html
+++ b/integrantes.html
@@ -10,16 +10,16 @@
   <body>
     <header class="cabecalho">
       <!-- HEADER (parte da logo e foto de capa)-->
-      <a href="index.html">
+      <!-- <a href="index.html">
         <img class="logo-top" src="imagens/logo-transp.png" alt="" />
-      </a>
+      </a> -->
       <div class="capa"></div>
     </header>
     <nav class="menu">
       <!-- NAV (parte dos linkes de navegação do menu)-->
-      <a href="integrantes.html">INTEGRANTES</a>
+      <a href="index.html">PÁGINA INICIAL</a>
+      <a href="#" class="integrantes-ativo">INTEGRANTES</a>
       <a href="clipes.html">CLIPES</a>
-      <a href="empresa.html">EMPRESA</a>
       <a href="curiosidades.html">CURIOSIDADES</a>
     </nav>
 
@@ -115,7 +115,9 @@
     </main>
 
     <footer class="rodape">
-      <img class="logo-rodape" src="imagens/logo-transp.png" alt="" />
+      <a href="index.html"
+        ><img class="logo-rodape" src="imagens/logo-transp.png" alt="" />
+      </a>
       <p class="texto-rodape">
         Todos os direitos reservados - &copy Nayara 2023
       </p>
