--- a/curiosidades.html
+++ b/curiosidades.html
@@ -24,11 +24,74 @@
     </nav>
     <main class="container">
       <!-- MAIN (parte cental do corpo)-->
-      <br />
       <p>
         O nome EVERGLOW significa estar sempre brilhando. O nome é um reflexo da
         energia e força de vontade do grupo. O nome oficial do fandom de
         Everglow é Forever (FθRΣVΣR), que significa “estar juntos para sempre”.
+      </p>
+
+      <div class="secao-fotos">
+        <img class="tour" src="imagens/tour/1.jpg" alt="" />
+        <img class="tour" src="imagens/tour/2.jpg" alt="" />
+        <img class="tour" src="imagens/tour/3.jpg" alt="" />
+        <img class="tour" src="imagens/tour/4.jpg" alt="" />
+      </div>
+
+      <br />
+      <hr />
+      <br />
+
+      <p>
+        O MV de Promise, foi uma colaboração com a
+        <a href="https://www.unicef.org/" target="_blank">UNICEF</a> com o
+        objetivo de arrecadar fundos para a campanha 'Promise Campaign' que
+        ciuda da saúde e bem estar das crianças de todo o mundo que enfrentam
+        dificuldades.
+      </p>
+
+      <div class="secao-fotos">
+        <img class="tour" src="imagens/unicef/1.jpeg" alt="" />
+        <img class="tour" src="imagens/unicef/2.png" alt="" />
+      </div>
+
+      <br />
+      <hr />
+      <br />
+
+      <p>
+        A OST (Original Soundtrack) de LET ME DANCE foi gravada para a trilha
+        sonora do <br />
+        drama sul-coreano
+        <a
+          href="https://www.iq.com/album/the-spies-who-loved-me-2020-cug87lqpc1?lang=pt_br"
+          target="_blank"
+          >The Spies Who Loved Me</a
+        >
+      </p>
+
+      <br />
+      <hr />
+      <br />
+
+      <p>
+        Ghost Light foi uma colaboração com o DJ
+        <a
+          href="https://open.spotify.com/intl-pt/artist/3OKg7YbOIatODzkRIbLJR4?si=v1p69syMRAaXsQ5kaJKyeQ"
+          >TheFatRat</a
+        >
+
+        <br />
+        <br />
+        <iframe
+          style="border-radius: 12px"
+          src="https://open.spotify.com/embed/album/4v9P47TGhiu4ZOsIrGXjIM?utm_source=generator"
+          width="100%"
+          height="152"
+          frameborder="0"
+          allowfullscreen=""
+          allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
+          loading="lazy"
+        ></iframe>
       </p>
     </main>
 
